--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -8,7 +8,7 @@
 <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
     &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Locations' %}</a>
-    &rsaquo; {{ location_data.name }}
+    &rsaquo; {{ location_data.naam }}
 </div>
 {% endblock %}
 
@@ -20,13 +20,16 @@
 </ul>
 {% endif %}
 {% block content %}
+        <div>
+            Pandcode: {{ location_data.pandcode }}<br>
+            Mutatie datum: {{ location_data.mut_datum }}
+        </div>
     {% for field in form  %}
         <div>
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field.value }}
+        {{ field.errors }}
+        {{ field.label_tag }} {{ field.value }}
         </div>
     {% endfor %}
-    <a href="{% url 'location-update' building_code %}">Edit</a>
-</div>
+    <a href="{% url 'location-update' pandcode %}">Edit</a>
 <br />
 {% endblock %}
