--- a/datafundament_fb/locations/static/css/ggd_header.css
+++ b/datafundament_fb/locations/static/css/ggd_header.css
@@ -36,6 +36,47 @@
 
 /*******************************************/
 
+#header nav {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#header nav ul {
+  display: flex;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  align-items: center;
+}
+
+#header nav ul li a,
+#header nav ul li button {
+  display: inline-flex;
+  align-items: center;
+  height: 100%;
+  padding: 12px 24px;
+  color: var(--color-black);
+  text-decoration: none;
+  overflow-wrap: break-word;
+  border: none;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: normal;
+  text-transform: none;
+}
+
+#header nav ul li a:hover, #header nav ul li a:focus,
+#header nav ul li button:hover, #header nav ul li button:focus {
+  margin: 0;
+  color: var(--color-dark-blue);
+  text-decoration: none;
+}
+
+
+/*******************************************/
+
 div.breadcrumbs {
   background: var(--color-blue);
 }
