--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -1,8 +1,5 @@
-{% extends 'admin/base_site.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
-
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
@@ -16,20 +13,33 @@
 <ul class="messages">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
+    {% endfor %}
 </ul>
 {% endif %}
+
 {% block content %}
-    <form action="." method="POST">
+<h1>Nieuwe locatie</h1>
+<form action="." method="POST">
+    <div class="data-view">
         {% csrf_token %}
-        <div>
-            Pandcode: Wordt gevuld na het opslaan<br>
+        <div class="data-view-row">
+            <div class="data-label">Pandcode</div>
+            <div class="data-value">Wordt automatisch bepaald na het opslaan</div>
         </div>
-        {{ form }}
-        <div class="submit_row">
-            <input class="default" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}">
+        {% for field in form %}
+        <div class="data-view-row">
+            <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+            <div class="data-value">
+                {{ field }}
+                {{ field.errors }}
+            </div>
         </div>
-    </form>
-</div>
-<br />
+        {% endfor %}
+        <div class="btn-container">
+            <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}">Aanmaken</button>
+            <!-- <input class="default" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}"> -->
+            <a href="{% url 'location-list' %}" class="btn btn-secundair">Annuleren</a>
+        </div>
+    </div>
+</form>
 {% endblock %}
