--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -1,5 +1,5 @@
 {% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% load i18n static admin_urls admin_modify %}
 
 {% block extrastyle %}{{ block.super }}
 <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
@@ -33,10 +33,12 @@
             {% endfor %}
         </ul>
     </div>
+    {% if user.is_authenticated %}
     <div class="page-right">
         <div class="btn-container">
             <a href="{% url 'location-create' %}" class="btn btn-secundair">Aanmaken</a>
         </div>
     </div>
+    {% endif %}
 </div>
 {% endblock %}
