--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -6,13 +6,13 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; {% translate 'Locations' %}
+    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    &rsaquo; {% translate 'Locaties' %}
 </div>
 {% endblock %}
 
 {% block content %}
-<h1>{% translate 'Locations' %}</h1>
+<h1>{% translate 'Locaties' %}</h1>
 
 <div class="page-content">
     <div class="page-left">
