werkend form, tests gedeeltelijk

--- a/datafundament_fb/locations/templates/locations/location-import.html
+++ b/datafundament_fb/locations/templates/locations/location-import.html
@@ -20,7 +20,7 @@
 {% endif %}
 
 {% block content %}
-<h1>Import vouchers</h1>
+<h1>Locaties importeren</h1>
 <div>
     <p>
         Importeer locaties uit een CSV bronbestand. Let hierbij op het volgende:<br>
