--- a/datafundament_fb/locations/static/css/ggd_base.css
+++ b/datafundament_fb/locations/static/css/ggd_base.css
@@ -95,14 +95,21 @@ H1 {
   font-size: 2rem;
   margin-bottom: 1rem;
 }
-H2 { font-size: 1.5rem; }
+H2 {
+  font-size: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
 H3 { font-size: 1.25rem; }
 H4 { font-size: 1.125rem; }
 H5 { font-size: 1rem; }
 
 /*******************************************/
+* + h2 {
+  margin-top: 1rem;
+}
 
-h1 + small {
+h2 + small {
   display: block;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
@@ -131,6 +138,7 @@ ul {
 
 ul > li {
   list-style: none;
+  padding: 0;
 }
 
 li, dt, dd {
@@ -140,8 +148,6 @@ li, dt, dd {
 
 
 /*******************************************/
-
-
 
 button {
   font-family: "amsterdam sans";
