--- a/datafundament_fb/locations/templates/locations/location-beheer.html
+++ b/datafundament_fb/locations/templates/locations/location-beheer.html
@@ -1,7 +1,17 @@
 {% extends 'admin/admin_base.html' %}
-{% load i18n static admin_urls admin_modify %}
+{% load i18n static%}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    <span>&rsaquo;</span>
+    Beheer
+</div>
+{% endblock %}
 
 {% block content %}
+<h2>Beheer</h2>
+
 <ul class="data-list">
     <li>
         <a href="{% url 'location-list' %}">
@@ -34,7 +44,7 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="import">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -44,7 +54,7 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="export">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
