--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -4,15 +4,10 @@
 {% block extrastyle %}{{ block.super }}
 <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; {% translate 'Locations' %}
-</div>
-{% endblock %}
+{% block breadcrumbs %}{% endblock %}
 
 {% block content %}
-<h1>{% translate 'Locations' %}</h1>
+<h2>{% translate 'Locations' %}</h2>
 
 <div class="page-content">
     <div class="page-left">
@@ -33,12 +28,13 @@
             {% endfor %}
         </ul>
     </div>
-    {% if user.is_authenticated %}
     <div class="page-right">
         <div class="btn-container">
+            <a href="export" class="btn btn-primair">Exporteren</a>
+            {% if user.is_authenticated %}
             <a href="{% url 'location-create' %}" class="btn btn-secundair">Aanmaken</a>
+            {% endif %}
         </div>
     </div>
-    {% endif %}
 </div>
 {% endblock %}
