forms, tests including external services

--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -7,7 +7,7 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Locations' %}</a>
+    &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Lokaties' %}</a>
 </div>
 {% endblock %}
 
