--- a/datafundament_fb/locations/templates/locations/location-import.html
+++ b/datafundament_fb/locations/templates/locations/location-import.html
@@ -43,7 +43,7 @@
             {% endfor %}
         </fieldset>
         <div class="submit_row">
-            <input class="default" type="submit" name="_save" value="Import vouchers" formaction="{% url 'location-import' %}">
+            <input class="default" type="submit" name="_save" value="Importeer" formaction="{% url 'location-import' %}">
         </div>
     </form>
 </div>
