--- a/datafundament_fb/locations/templates/locations/location-beheer.html
+++ b/datafundament_fb/locations/templates/locations/location-beheer.html
@@ -24,7 +24,7 @@
         </a>
     </li>
     <li>
-        <a href="/admin/locations/locationproperty">
+        <a href="{% url 'admin:locations_locationproperty_changelist' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -34,7 +34,7 @@
         </a>
     </li>
     <li>
-        <a href="/admin/locations/externalservice">
+        <a href="{% url 'admin:locations_externalservice_changelist' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -44,7 +44,7 @@
         </a>
     </li>
     <li>
-        <a href="import">
+        <a href="{% url 'location-import' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -54,7 +54,7 @@
         </a>
     </li>
     <li>
-        <a href="export">
+        <a href="{% url 'location-export' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
