--- a/datafundament_fb/locations/templates/locations/location-import.html
+++ b/datafundament_fb/locations/templates/locations/location-import.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base_site.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
 
 {% block extrastyle %}{{ block.super }}
@@ -6,8 +6,9 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; {% translate 'Import Locations' %}
+    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    <span>&rsaquo;</span>
+    {% translate 'Import Locations' %}
 </div>
 {% endblock %}
 
@@ -20,33 +21,32 @@
 {% endif %}
 
 {% block content %}
-<h1>Locaties importeren</h1>
-<div>
-    <p>
-        Importeer locaties uit een CSV bronbestand. Let hierbij op het volgende:<br>
-    <ul>
-        <li>De kolomnamen moeten gelijk zijn aan de korte namen in de database</li>
-        <li>Kolommen moeten gescheiden zijn door een komma ','</li>
-        <li>Nieuwe waardes voor keuzelijstje worden automatisch toegevoegd</li>
-    </ul>
-    </p>
-    <form action="." method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="module aligned">
-            {% for field in form %}
-            <div class="form-row">
-                {{ field.label_tag }} {{ field }}
-                {% if field.help_text %}
-                <div class="help">{{ field.help_text|safe }}</div>
-                {% endif %}
+<h2>Locaties importeren</h2>
+<p>
+    Importeer locaties uit een CSV bronbestand. Let hierbij op het volgende:<br>
+<ul>
+    <li>De kolomnamen moeten gelijk zijn aan de korte namen in de database</li>
+    <li>Kolommen moeten gescheiden zijn door een komma ','</li>
+    <li>Nieuwe waardes voor keuzelijstje worden automatisch toegevoegd</li>
+</ul>
+</p>
+<form action="." method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset class="module aligned">
+        {% for field in form %}
+        <div class="form-row">
+            {{ field.label_tag }} {{ field }}
+            {% if field.help_text %}
+            <div class="help">{{ field.help_text|safe }}</div>
+            {% endif %}
             </div>
-            {% endfor %}
-        </fieldset>
-        <div class="submit_row">
-            <input class="default" type="submit" name="_save" value="Importeer" formaction="{% url 'location-import' %}">
-        </div>
-    </form>
-</div>
-<br />
+        {% endfor %}
+    </fieldset>
+    <div class="btn-container">
+        <button class="btn btn-primair" type="submit" name="_save" value="Import vouchers" formaction="{% url 'location-import' %}">
+            Importeren
+        </button>
+    </div>
+</form>
 
 {% endblock %}
