--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -7,7 +7,7 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block content %}
-<h2>{% translate 'Locations' %}</h2>
+<h2>{% translate 'Locaties' %}</h2>
 
 <div class="page-content">
     <div class="page-left">
