--- a/datafundament_fb/locations/templates/locations/location-update.html
+++ b/datafundament_fb/locations/templates/locations/location-update.html
@@ -1,6 +1,9 @@
 {% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
 
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
+
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
