--- a/datafundament_fb/locations/templates/admin/locations/externalservice/change_list.html
+++ b/datafundament_fb/locations/templates/admin/locations/externalservice/change_list.html
@@ -29,9 +29,11 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
-&rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
+  <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+  <span>&rsaquo;</span>
+  <a href="{% url 'location-beheer' %}">{% translate 'Beheer' %}</a>
+  <span>&rsaquo;</span>
+  {{ cl.opts.verbose_name_plural|capfirst }}
 </div>
 {% endblock %}
 {% endif %}
