Feature/amsterdam styling (#21)
* amsterdam styling

* renamed view, languago_code, admin title, templates

* updated tests after language_code change

* minor correction

* minor fixes

* fix verbose_name_plural voor locatie koppelingen

---------

Co-authored-by: landrej <user@example.org>
Co-authored-by: Frank Mouthaan <frankmouthaan@gmail.com>

--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -1,33 +1,40 @@
-{% extends 'admin/base_site.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% extends 'admin/admin_base.html' %}
+{% load i18n static admin_urls admin_modify %}
 
 {% block extrastyle %}{{ block.super }}
 <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Lokaties' %}</a>
-</div>
-{% endblock %}
+{% block breadcrumbs %}{% endblock %}
 
 {% block content %}
-<h1>Locations</h1>
-<div>
-    <a href="{% url 'location-create' %}">New</a>
-</div>
-<div>
-    <!-- Iterate over object_list -->
-    <p>
-        {% for object in object_list %}
-        <!-- Display Objects -->
-        <a href="{% url 'location-detail' object.pandcode %}">{{object.pandcode}} - {{ object.name }}</a>
-    </p>
-    <!-- If object_list is empty  -->
-    {% empty %}
-    No objects yet.
-    {% endfor %}
-</div>
-<br />
+<h2>{% translate 'Locaties' %}</h2>
 
+<div class="page-content">
+    <div class="page-left">
+        <ul class="data-list">
+            {% for object in object_list %}
+            <li>
+                <a href="{% url 'location-detail' object.pandcode %}">
+                    <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
+                            <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
+                        </svg>
+                    </span>
+                    {{object.pandcode}} - {{ object.name }}
+                </a>
+            </li>
+            {% empty %}
+            <li>Geen locaties gevonden</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="page-right">
+        <div class="btn-container">
+            <a href="export" class="btn btn-primair">Exporteren</a>
+            {% if user.is_authenticated %}
+            <a href="{% url 'location-create' %}" class="btn btn-secundair">Aanmaken</a>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
