--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -1,14 +1,11 @@
-{% extends 'admin/base_site.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
-
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Locations' %}</a>
-    &rsaquo; {% translate 'New' %}
+    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    <span>&rsaquo;</span>
+    Locatie toevoegen
 </div>
 {% endblock %}
 
@@ -16,20 +13,32 @@
 <ul class="messages">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
+    {% endfor %}
 </ul>
 {% endif %}
+
 {% block content %}
+<h2>Nieuwe locatie</h2>
 <form action="." method="POST">
-    {% csrf_token %}
-    <div>
-        Pandcode: Wordt gevuld na het opslaan<br>
-    </div>
-    {{ form }}
-    <div class="submit_row">
-        <input class="default" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}">
+    <div class="data-view">
+        {% csrf_token %}
+        <div class="data-view-row">
+            <div class="data-label">Pandcode</div>
+            <div class="data-value">Wordt automatisch bepaald na het opslaan</div>
+        </div>
+        {% for field in form %}
+        <div class="data-view-row">
+            <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+            <div class="data-value">
+                {{ field }}
+                {{ field.errors }}
+            </div>
+        </div>
+        {% endfor %}
+        <div class="btn-container">
+            <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}">Aanmaken</button>
+            <a href="{% url 'location-list' %}" class="btn btn-secundair">Annuleren</a>
+        </div>
     </div>
 </form>
-</div>
-<br />
 {% endblock %}
