--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -1,14 +1,11 @@
-{% extends 'admin/base_site.html' %}
+{% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
-
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-    &rsaquo; <a href="{% url 'location-list' %}">{% translate 'Locations' %}</a>
-    &rsaquo; {{ location_data.naam }}
+    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    <span>&rsaquo;</span>
+    {{ location_data.naam }}
 </div>
 {% endblock %}
 
@@ -16,20 +13,33 @@
 <ul class="messages">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
+    {% endfor %}
 </ul>
 {% endif %}
+
 {% block content %}
-<div>
-    Pandcode: {{ location_data.pandcode }}<br>
-    Laatst gewijzigd: {{ location_data.gewijzigd }}
+<h2>{{ location_data.pandcode }} - {{ location_data.naam }}</h2>
+<small>
+    Locatie gewijzigd op {{ location_data.gewijzigd }}
+</small>
+
+<dl class="data-view">
+    <div class="data-view-row">
+        <dt class="data-label">Pandcode</dt>
+        <dd class="data-value">{{ location_data.pandcode }}</dd>
+    </div>
+    {% for field in form %}
+    <div class="data-view-row">
+        <dt class="data-label">{{ field.label }}</dt>
+        <dd class="data-value">{% if field.value %}{{ field.value }}{% endif %}</dd>
+    </div>
+    {% endfor %}
+</dl>
+
+<div class="btn-container">
+    {% if user.is_authenticated %}
+    <a href="{% url 'location-update' location_data.pandcode %}" class="btn btn-primair">Wijzigen</a>
+    {% endif %}
+    <a href="{% url 'location-list' %}" class="btn btn-secundair">Terug</a>
 </div>
-{% for field in form %}
-<div>
-    {{ field.errors }}
-    {{ field.label_tag }} {{ field.value }}
-</div>
-{% endfor %}
-<a href="{% url 'location-update' location_data.pandcode %}">Edit</a>
-<br />
 {% endblock %}
