--- a/datafundament_fb/locations/templates/admin/locations/externalservice/change_list.html
+++ b/datafundament_fb/locations/templates/admin/locations/externalservice/change_list.html
@@ -31,7 +31,7 @@
 <div class="breadcrumbs">
   <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
   <span>&rsaquo;</span>
-  <a href="{% url 'location-beheer' %}">{% translate 'Beheer' %}</a>
+  <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
   <span>&rsaquo;</span>
   {{ cl.opts.verbose_name_plural|capfirst }}
 </div>
