--- a/datafundament_fb/locations/templates/admin/locations/locationproperty/change_form.html
+++ b/datafundament_fb/locations/templates/admin/locations/locationproperty/change_form.html
@@ -17,7 +17,7 @@
 <div class="breadcrumbs">
   <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
   <span>&rsaquo;</span>
-  <a href="{% url 'location-beheer' %}">{% translate 'Beheer' %}</a>
+  <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
   <span>&rsaquo;</span>
   {% if has_view_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst}}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
   <span>&rsaquo;</span>
