--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -4,6 +4,10 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    {% if user.is_authenticated %}
+    <span>&rsaquo;</span>
+    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
+    {% endif %}
     <span>&rsaquo;</span>
     {{ location_data.naam }}
 </div>
