--- a/datafundament_fb/locations/templates/locations/location-export.html
+++ b/datafundament_fb/locations/templates/locations/location-export.html
@@ -7,6 +7,10 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    {% if user.is_authenticated %}
+    <span>&rsaquo;</span>
+    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
+    {% endif %}
     <span>&rsaquo;</span>
     {% translate 'Export Locaties' %}
 </div>
