in templates novalidate tag in forms gezet

--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -21,7 +21,7 @@
 
 {% block content %}
 <h2>Nieuwe locatie</h2>
-<form action="." method="POST">
+<form action="." method="POST" novalidate>
     <div class="data-view">
         {% csrf_token %}
         <div class="data-view-row">
