--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -23,6 +23,9 @@
 
 {% block content %}
 <h2>{{ location_data.pandcode }} - {{ location_data.naam }}</h2>
+{% if location_data.archief %}
+<h3>Gearchiveerd</h3>
+{% endif %}
 <small>
     Locatie gewijzigd op {{ location_data.gewijzigd }}
 </small>
