--- a/datafundament_fb/locations/static/css/ggd_buttons.css
+++ b/datafundament_fb/locations/static/css/ggd_buttons.css
@@ -1,5 +1,6 @@
 
-.btn-container {
+.btn-container,
+.btn-container form {
   display: flex;
   row-gap: 0.5rem;
   column-gap: 1rem;
@@ -24,6 +25,7 @@ button.btn {
   border-color: transparent;
   text-decoration: none;
   cursor: pointer;
+  background-color: var(--color-white);
 }
 
 a.btn-primair,
