--- a/datafundament_fb/locations/templates/admin/admin_base.html
+++ b/datafundament_fb/locations/templates/admin/admin_base.html
@@ -7,6 +7,7 @@
 {{ block.super }}
 <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">
 <link rel="stylesheet" href="{% static 'css/ggd_base.css' %}">
+<link rel="stylesheet" href="{% static 'css/ggd_components.css' %}">
 <link rel="stylesheet" href="{% static 'css/ggd_buttons.css' %}">
 <link rel="stylesheet" href="{% static 'css/ggd_header.css' %}">
 <link rel="stylesheet" href="{% static 'css/ggd_pages.css' %}">
