--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -22,10 +22,13 @@
 {% endif %}
 
 {% block content %}
-<h2>{{ location_data.pandcode }} - {{ location_data.naam }}</h2>
 {% if location_data.archief %}
-<h3>Gearchiveerd</h3>
+<div class="alert alert-info">
+    <div class="title">Gearchiveerd</div>
+    <p>De locatie is gearchiveerd op {{ location_data.gewijzigd }}.</p>
+</div>
 {% endif %}
+<h2>{{ location_data.pandcode }} - {{ location_data.naam }}</h2>
 <small>
     Locatie gewijzigd op {{ location_data.gewijzigd }}
 </small>
@@ -44,17 +47,20 @@
 </dl>
 <div class="btn-container">
     {% if user.is_authenticated %}
-    <form action="." method="POST">
-    {% csrf_token %}
-    {% if location_data.archief %}
-    <input name="_archive" type="hidden" value="dearchive">
-    {% else %}
-    <a href="{% url 'location-update' location_data.pandcode %}" class="btn btn-primair">Wijzigen</a>
-    <input name="_archive" type="hidden" value="archive">
-    {% endif %}
-    <button class="btn btn-secundair" type="submit"
-        formaction="{% url 'location-detail' location_data.pandcode %}">{{ location_data.archief|yesno:"Dearchiveren,Archiveren" }}</button>
-    </form>
+        {% if not location_data.archief %}
+        <a href="{% url 'location-update' location_data.pandcode %}" class="btn btn-primair">Wijzigen</a>
+        {% endif %}
+
+        <form action="." method="POST">
+            {% csrf_token %}
+            {% if location_data.archief %}
+            <input name="_archive" type="hidden" value="dearchive">
+            {% else %}
+            <input name="_archive" type="hidden" value="archive">
+            {% endif %}
+            <button class="btn btn-secundair" type="submit"
+                formaction="{% url 'location-detail' location_data.pandcode %}">{{ location_data.archief|yesno:"Dearchiveren,Archiveren" }}</button>
+        </form>
     {% endif %}
     <a href="{% url 'location-list' %}" class="btn btn-secundair">Terug</a>
 </div>
