tests, template, processor aangepast

--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -30,7 +30,7 @@
 {% endif %}
 <h2>{{ location_data.pandcode }} - {{ location_data.naam }}</h2>
 <small>
-    Locatie gewijzigd op {{ location_data.gewijzigd }}
+    gewijzigd op {{ location_data.gewijzigd }} | aangemaakt op {{ location_data.aangemaakt }}
 </small>
 
 <dl class="data-view">
